--- a/CT06/Question 1/index.html
+++ b/CT06/Question 1/index.html
@@ -10,7 +10,68 @@
 </head>
 <body>
     <div class="container">
-        
+        <table class= "row-4 col-4 zebra_striping">
+            <thead>
+                <tr>
+                    <th>
+                        S/N
+                    </th>
+                    <th>
+                        Course Name
+                    </th>
+                    <th>
+                        Grade
+                    </th>
+                    <th>
+                        Semester
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        001
+                    </td>
+                    <td>
+                        Web Development
+                    </td>
+                    <td>
+                        A+
+                    </td>
+                    <td>
+                        Semester1
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        002
+                    </td>
+                    <td>
+                        Minecraft Python
+                    </td>
+                    <td>
+                        B+
+                    </td>
+                    <td>
+                        Semester1
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        003
+                    </td>
+                    <td>
+                        Scratch
+                    </td>
+                    <td>
+                        B+
+                    </td>
+                    <td>
+                        Semester1
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
